#
# project: fips-rmlui
#
cmake_minimum_required(VERSION 3.21)
project(fips-rmlui)
# include the fips main cmake file
get_filename_component(FIPS_ROOT_DIR "../fips" ABSOLUTE)
include("${FIPS_ROOT_DIR}/cmake/fips.cmake")

# include_directories(src)
fips_setup()
# add_subdirectory(src/...)
# add_subdirectory(src/...)

fips_begin_lib(RmlUiCore)

fips_dir(RmlUi/Include/RmlUi/Config)
    fips_files
    (
        Config.h
    )

fips_dir(RmlUi/Include/RmlUi/Core)
    fips_files
    (
        Animation.h
        BaseXMLParser.h
        Box.h
        CallbackTexture.h
        Colour.h
        Colour.inl
        CompiledFilterShader.h
        ComputedValues.h
        Context.h
        ContextInstancer.h
        ConvolutionFilter.h
        Core.h
        DataModelHandle.h
        DataStructHandle.h
        DataTypeRegister.h
        DataTypes.h
        DataVariable.h
        Debug.h
        DecorationTypes.h
        Decorator.h
        Dictionary.h
        EffectSpecification.h
        Element.h
        Element.inl
        ElementDocument.h
        ElementInstancer.h
        ElementScroll.h
        ElementText.h
        ElementUtilities.h
        Event.h
        EventInstancer.h
        EventListener.h
        EventListenerInstancer.h
        Factory.h
        FileInterface.h
        Filter.h
        FontEffect.h
        FontEffectInstancer.h
        FontEngineInterface.h
        FontGlyph.h
        FontMetrics.h
        Geometry.h
        Header.h
        ID.h
        Input.h
        Log.h
        Math.h
        Matrix4.h
        Matrix4.inl
        Mesh.h
        MeshUtilities.h
        NumericValue.h
        ObserverPtr.h
        Platform.h
        Plugin.h
        Profiling.h
        PropertiesIteratorView.h
        Property.h
        PropertyDefinition.h
        PropertyDictionary.h
        PropertyIdSet.h
        PropertyParser.h
        PropertySpecification.h
        Rectangle.h
        RenderInterface.h
        RenderInterfaceCompatibility.h
        RenderManager.h
        ScriptInterface.h
        ScrollTypes.h
        Span.h
        Spritesheet.h
        StableVector.h
        Stream.h
        StreamMemory.h
        StringUtilities.h
        StyleSheet.h
        StyleSheetContainer.h
        StyleSheetSpecification.h
        StyleSheetTypes.h
        StyleTypes.h
        SystemInterface.h
        TextInputContext.h
        TextInputHandler.h
        TextShapingContext.h
        Texture.h
        Traits.h
        Transform.h
        TransformPrimitive.h
        Tween.h
        TypeConverter.h
        TypeConverter.inl
        Types.h
        URL.h
        UniqueRenderResource.h
        Unit.h
        Utilities.h
        Variant.h
        Variant.inl
        Vector2.h
        Vector2.inl
        Vector3.h
        Vector3.inl
        Vector4.h
        Vector4.inl
        Vertex.h
        XMLNodeHandler.h
        XMLParser.h
    )
    
fips_dir(RmlUi/Include/RmlUi/Containers)
    fips_files
    (
        robin_hood.h
    )
    
fips_dir(RmlUi/Include/RmlUi/Containers/itlib)
    fips_files
    (
        flat_map.hpp
        flat_set.hpp
    )
    
fips_dir(RmlUi/Include/RmlUi/Elements)
    fips_files
    (
        ElementForm.h
        ElementFormControl.h
        ElementFormControlInput.h
        ElementFormControlSelect.h
        ElementFormControlTextArea.h
        ElementProgress.h
        ElementTabSet.h
    )
    
fips_dir(RmlUi/Source/Core)
    fips_files
    (
        BaseXMLParser.cpp
        Box.cpp
        CallbackTexture.cpp
        Clock.cpp
        Clock.h
        CompiledFilterShader.cpp
        ComputeProperty.cpp
        ComputeProperty.h
        ComputedValues.cpp
        Context.cpp
        ContextInstancer.cpp
        ContextInstancerDefault.cpp
        ContextInstancerDefault.h
        ControlledLifetimeResource.h
        ConvolutionFilter.cpp
        Core.cpp
        DataController.cpp
        DataController.h
        DataControllerDefault.cpp
        DataControllerDefault.h
        DataExpression.cpp
        DataExpression.h
        DataModel.cpp
        DataModel.h
        DataModelHandle.cpp
        DataTypeRegister.cpp
        DataVariable.cpp
        DataView.cpp
        DataView.h
        DataViewDefault.cpp
        DataViewDefault.h
        Decorator.cpp
        DecoratorGradient.cpp
        DecoratorGradient.h
        DecoratorNinePatch.cpp
        DecoratorNinePatch.h
        DecoratorShader.cpp
        DecoratorShader.h
        DecoratorTiled.cpp
        DecoratorTiled.h
        DecoratorTiledBox.cpp
        DecoratorTiledBox.h
        DecoratorTiledHorizontal.cpp
        DecoratorTiledHorizontal.h
        DecoratorTiledImage.cpp
        DecoratorTiledImage.h
        DecoratorTiledVertical.cpp
        DecoratorTiledVertical.h
        DocumentHeader.cpp
        DocumentHeader.h
        EffectSpecification.cpp
        Element.cpp
        ElementAnimation.cpp
        ElementAnimation.h
        ElementBackgroundBorder.cpp
        ElementBackgroundBorder.h
        ElementDefinition.cpp
        ElementDefinition.h
        ElementDocument.cpp
        ElementEffects.cpp
        ElementEffects.h
        ElementHandle.cpp
        ElementHandle.h
        ElementInstancer.cpp
        ElementMeta.cpp
        ElementMeta.h
        ElementScroll.cpp
        ElementStyle.cpp
        ElementStyle.h
        ElementText.cpp
        ElementUtilities.cpp
        Event.cpp
        EventDispatcher.cpp
        EventDispatcher.h
        EventInstancer.cpp
        EventInstancerDefault.cpp
        EventInstancerDefault.h
        EventListenerInstancer.cpp
        EventSpecification.cpp
        EventSpecification.h
        Factory.cpp
        FileInterface.cpp
        FileInterfaceDefault.cpp
        FileInterfaceDefault.h
        Filter.cpp
        FilterBasic.cpp
        FilterBasic.h
        FilterBlur.cpp
        FilterBlur.h
        FilterDropShadow.cpp
        FilterDropShadow.h
        FontEffect.cpp
        FontEffectBlur.cpp
        FontEffectBlur.h
        FontEffectGlow.cpp
        FontEffectGlow.h
        FontEffectInstancer.cpp
        FontEffectOutline.cpp
        FontEffectOutline.h
        FontEffectShadow.cpp
        FontEffectShadow.h
        FontEngineInterface.cpp
        Geometry.cpp
        GeometryBackgroundBorder.cpp
        GeometryBackgroundBorder.h
        GeometryBoxShadow.cpp
        GeometryBoxShadow.h
        IdNameMap.h
        Log.cpp
        LogDefault.cpp
        LogDefault.h
        Math.cpp
        Memory.cpp
        Memory.h
        MeshUtilities.cpp
        ObserverPtr.cpp
        Plugin.cpp
        PluginRegistry.cpp
        PluginRegistry.h
        Pool.h
        Pool.inl
        Profiling.cpp
        PropertiesIterator.h
        PropertiesIteratorView.cpp
        Property.cpp
        PropertyDefinition.cpp
        PropertyDictionary.cpp
        PropertyParserAnimation.cpp
        PropertyParserAnimation.h
        PropertyParserBoxShadow.cpp
        PropertyParserBoxShadow.h
        PropertyParserColorStopList.cpp
        PropertyParserColorStopList.h
        PropertyParserColour.cpp
        PropertyParserColour.h
        PropertyParserDecorator.cpp
        PropertyParserDecorator.h
        PropertyParserFilter.cpp
        PropertyParserFilter.h
        PropertyParserFontEffect.cpp
        PropertyParserFontEffect.h
        PropertyParserKeyword.cpp
        PropertyParserKeyword.h
        PropertyParserNumber.cpp
        PropertyParserNumber.h
        PropertyParserRatio.cpp
        PropertyParserRatio.h
        PropertyParserString.cpp
        PropertyParserString.h
        PropertyParserTransform.cpp
        PropertyParserTransform.h
        PropertyShorthandDefinition.h
        PropertySpecification.cpp
        RenderInterface.cpp
        RenderInterfaceCompatibility.cpp
        RenderManager.cpp
        RenderManagerAccess.cpp
        RenderManagerAccess.h
        ScrollController.cpp
        ScrollController.h
        Spritesheet.cpp
        Stream.cpp
        StreamFile.cpp
        StreamFile.h
        StreamMemory.cpp
        StringUtilities.cpp
        StyleSheet.cpp
        StyleSheetContainer.cpp
        StyleSheetFactory.cpp
        StyleSheetFactory.h
        StyleSheetNode.cpp
        StyleSheetNode.h
        StyleSheetParser.cpp
        StyleSheetParser.h
        StyleSheetSelector.cpp
        StyleSheetSelector.h
        StyleSheetSpecification.cpp
        SystemInterface.cpp
        Template.cpp
        Template.h
        TemplateCache.cpp
        TemplateCache.h
        Texture.cpp
        TextureDatabase.cpp
        TextureDatabase.h
        TextureLayout.cpp
        TextureLayout.h
        TextureLayoutRectangle.cpp
        TextureLayoutRectangle.h
        TextureLayoutRow.cpp
        TextureLayoutRow.h
        TextureLayoutTexture.cpp
        TextureLayoutTexture.h
        Traits.cpp
        Transform.cpp
        TransformPrimitive.cpp
        TransformState.cpp
        TransformState.h
        TransformUtilities.cpp
        TransformUtilities.h
        Tween.cpp
        TypeConverter.cpp
        URL.cpp
        Variant.cpp
        WidgetScroll.cpp
        WidgetScroll.h
        XMLNodeHandler.cpp
        XMLNodeHandlerBody.cpp
        XMLNodeHandlerBody.h
        XMLNodeHandlerDefault.cpp
        XMLNodeHandlerDefault.h
        XMLNodeHandlerHead.cpp
        XMLNodeHandlerHead.h
        XMLNodeHandlerTemplate.cpp
        XMLNodeHandlerTemplate.h
        XMLParseTools.cpp
        XMLParseTools.h
        XMLParser.cpp
        precompiled.h
    )
    
fips_dir(RmlUi/Source/Core/Elements)
    fips_files
    (
        ElementForm.cpp
        ElementFormControl.cpp
        ElementFormControlInput.cpp
        ElementFormControlSelect.cpp
        ElementFormControlTextArea.cpp
        ElementImage.cpp
        ElementImage.h
        ElementLabel.cpp
        ElementLabel.h
        ElementProgress.cpp
        ElementTabSet.cpp
        ElementTextSelection.cpp
        ElementTextSelection.h
        InputType.cpp
        InputType.h
        InputTypeButton.cpp
        InputTypeButton.h
        InputTypeCheckbox.cpp
        InputTypeCheckbox.h
        InputTypeRadio.cpp
        InputTypeRadio.h
        InputTypeRange.cpp
        InputTypeRange.h
        InputTypeSubmit.cpp
        InputTypeSubmit.h
        InputTypeText.cpp
        InputTypeText.h
        WidgetDropDown.cpp
        WidgetDropDown.h
        WidgetSlider.cpp
        WidgetSlider.h
        WidgetTextInput.cpp
        WidgetTextInput.h
        WidgetTextInputMultiLine.cpp
        WidgetTextInputMultiLine.h
        WidgetTextInputSingleLine.cpp
        WidgetTextInputSingleLine.h
        WidgetTextInputSingleLinePassword.cpp
        WidgetTextInputSingleLinePassword.h
        XMLNodeHandlerSelect.cpp
        XMLNodeHandlerSelect.h
        XMLNodeHandlerTabSet.cpp
        XMLNodeHandlerTabSet.h
        XMLNodeHandlerTextArea.cpp
        XMLNodeHandlerTextArea.h
    )
    
fips_dir(RmlUi/Source/Core/FontEngineDefault)
    fips_files
    (
        FontEngineInterfaceDefault.cpp
        FontEngineInterfaceDefault.h
        FontFace.cpp
        FontFace.h
        FontFaceHandleDefault.cpp
        FontFaceHandleDefault.h
        FontFaceLayer.cpp
        FontFaceLayer.h
        FontFamily.cpp
        FontFamily.h
        FontProvider.cpp
        FontProvider.h
        FontTypes.h
        FreeTypeInterface.cpp
        FreeTypeInterface.h
    )
    
fips_dir(RmlUi/Source/Core/Layout)
    fips_files
    (
        BlockContainer.cpp
        BlockContainer.h
        BlockFormattingContext.cpp
        BlockFormattingContext.h
        CMakeLists.txt
        ContainerBox.cpp
        ContainerBox.h
        FlexFormattingContext.cpp
        FlexFormattingContext.h
        FloatedBoxSpace.cpp
        FloatedBoxSpace.h
        FormattingContext.cpp
        FormattingContext.h
        InlineBox.cpp
        InlineBox.h
        InlineContainer.cpp
        InlineContainer.h
        InlineLevelBox.cpp
        InlineLevelBox.h
        InlineTypes.h
        LayoutBox.cpp
        LayoutBox.h
        LayoutDetails.cpp
        LayoutDetails.h
        LayoutEngine.cpp
        LayoutEngine.h
        LayoutPools.cpp
        LayoutPools.h
        LineBox.cpp
        LineBox.h
        ReplacedFormattingContext.cpp
        ReplacedFormattingContext.h
        TableFormattingContext.cpp
        TableFormattingContext.h
        TableFormattingDetails.cpp
        TableFormattingDetails.h
    )

fips_end_lib()

fips_begin_lib(RmlUiDebugger)
    
fips_dir(RmlUi/Include/RmlUi/Elements)
    fips_files
    (
        ElementForm.h
        ElementFormControl.h
        ElementFormControlInput.h
        ElementFormControlSelect.h
        ElementFormControlTextArea.h
        ElementProgress.h
        ElementTabSet.h
    )

fips_dir(RmlUi/Include/RmlUi/Debugger)
    fips_files
    (
        Debugger.h
        Header.h
    )
    
fips_dir(RmlUi/Source/Debugger)
    fips_files
    (
        BeaconSource.h
        CommonSource.h
        Debugger.cpp
        DebuggerPlugin.cpp
        DebuggerPlugin.h
        DebuggerSystemInterface.cpp
        DebuggerSystemInterface.h
        ElementContextHook.cpp
        ElementContextHook.h
        ElementDebugDocument.cpp
        ElementDebugDocument.h
        ElementInfo.cpp
        ElementInfo.h
        ElementLog.cpp
        ElementLog.h
        FontSource.h
        Geometry.cpp
        Geometry.h
        InfoSource.h
        LogSource.h
        MenuSource.h
    )

fips_end_lib()

fips_begin_lib(RmlUi)

fips_dir(RmlUi/Include/RmlUi)
    fips_files
    (
        Core.h
        Debugger.h
    )

fips_end_lib()

fips_deps(RmlUiDebugger RmlUiCore)
fips_deps(RmlUi RmlUiCore RmlUiDebugger)